// Copyright (c) 2022, NVIDIA CORPORATION.  All rights reserved.

syntax = "proto3";

message EvalConfig {
    //required
    uint32 validation_period_during_training = 1;
    uint32 batch_size = 2;
}
